fix: social network on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,22 @@ body{
 	cursor: pointer;
 }
 
+.social-xs {
+	columns: 6;
+	padding: 0 15px 0 15px;
+}
+
+.divider-xs {
+	height: 1px;
+	margin: 9px 0;
+	overflow: hidden;
+	background-color: #e5e5e5;
+}
+
+.social-xs a {
+	margin: auto;
+}
+
 #wordcloud {
 	display: block;
 	margin: -5%;
